[package]
name = "xotpad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
clap = { version = "3.1.18", default-features = false, features = ["std"] }
crossterm = "0.23.2"
futures = "0.3.21"
regex = "1.5.6"
tokio = { version = "1.18.2", features = ["full"] }
pty-process = { version = "0.2.0", features = ["backend-tokio"] }
tokio-util = { version = "0.7.2", features = ["codec"] }
